--- a/README
+++ b/README
@@ -1,30 +1,40 @@
-1 - Ajouter ces balises dans le fichier settings.xml de maven
+1 - Modify the external properties file using the corresponding connection to MySQL
 
-<pluginGroup>com.spotify</pluginGroup>
-into
+spring.datasource.url=jdbc:mysql://mysql:3306/mysql
+spring.datasource.username=root
+spring.datasource.password=
+
+2 - Modify the docker compose script using the corresponding connection to MySQL
+
+MYSQL_DATABASE: root
+MYSQL_ROOT_PASSWORD: 
+3 - Add into maven settings.xml using the corresponding connection to MySQL
+
 <pluginGroups>
+	<!-- for docker -->
+	<pluginGroup>com.spotify</pluginGroup>
 </pluginGroups>
 
-<!-- for pushing -->
-<server>
-  <id>docker-hub</id>
-  <username>pegasusma</username>
-  <password>hma@bucares</password>
-  <configuration>
-	  <email>hongyu.ma@hotmail.fr</email>
-  </configuration>
-</server>
-into
 <servers>
+	<!-- for pushing -->
+	<server>
+	  <id>docker-hub</id>
+	  <username>pegasusma</username>
+	  <password></password>
+	  <configuration>
+		  <email>hongyu.ma@hotmail.fr</email>
+	  </configuration>
+	</server>
 </servers>
 
 2 - Package command
 
-clean package + docker build + push : 
 >mvn clean package docker:build -DpushImage
 
-Aujourd'hui, pegasusma/indexation:0-SNAPSHOT
+The images generated id : pegasusma/indexation:0-SNAPSHOT
 
 3 - Docker-compose
 
 >docker-compose up
+
+
